<resources>
    <string name="app_name">Khana Pina</string>
    <string name="dessert">Dessert</string>
    <string name="pizza">Pizza</string>
    <string name="top_restaurants">Top Restaurants</string>
    <string name="burger">Burger</string>
    <string name="main_course">Main Course</string>
    <string name="drinks">Drinks</string>
    <string name="location_bar">Location Bar</string>
    <string name="location_icon">location Icon</string>
    <string name="untill_your">Until your</string>
    <string name="tummy_get_s_full">Tummy get\'s Full.</string>
    <string name="created_by_manish">Created by @Manish</string>
    <string name="eat_it">Eat It,</string>
    <string name="subtitle">Ready to order from top restaurants?</string>
    <string name="phone_number">Phone number</string>
    <string name="login">Login</string>
    <string name="stdcode">+91</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sweet_and_dessert"><![CDATA[Sweet &\nDessert]]></string>
    <string name="todo">TODO</string>
    <string name="hot_cold_drinks"><![CDATA[Hot & Cold\nDrinks]]></string>
    <string name="back_description">back</string>
    <string name="item_image">Item Image</string>
    <string name="rating">Rating</string>
    <string name="votes">Votes</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="add">Add</string>
    <string name="go_to_cart_layout" />
    <string name="go_to_cart">Go to cart</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="address">Address</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="landmark">Landmark :</string>


</resources>
