<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/welcomebck"
    tools:context=".Activities.LoginPage">

    <ImageView
        android:layout_width="285dp"
        android:layout_height="270dp"
        android:layout_above="@+id/topresttext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/topresttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contacnumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="43dp"
        android:alpha=".5"
        android:fontFamily="@font/bodoni_mt_bold"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="#F6F0F0"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/contacnumber"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/bodoni_mt_bold"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#A9000000" />

    <EditText
        android:id="@+id/code"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="207dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@+id/code"
        android:text="@string/stdcode"/>

    <Button
        android:id="@+id/button"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="120dp"
        android:alpha=".5"
        android:background="@drawable/roundcorner"
        android:backgroundTint="#2D2F31"
        android:fontFamily="@font/bodoni_mt_bold"
        android:onClick="verify"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="25sp" />
</RelativeLayout>