<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">


    <TextView
        android:id="@+id/tv_itemname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="50dp"
        android:layout_height="15dp"
        android:layout_below="@+id/tv_itemname"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="12sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/decrement_item"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/decrement"
            android:src="@drawable/ic_minus" />

        <ImageView
            android:id="@+id/increment_item"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/increment"
            android:src="@drawable/ic_plus" />

        <TextView
            android:id="@+id/item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:maxLength="2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/addItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add"
            android:textColor="@color/RightGreen"
            android:textSize="15sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>