<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DessertLayout">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/desert_sweet_background"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            android:src="@drawable/dessert_background" />

            <TextView
                android:id="@+id/Dessert_heading"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="37dp"
                android:layout_marginTop="155dp"
                android:layout_marginEnd="96dp"
                android:fontFamily="@font/perpetua"
                android:maxLines="2"
                android:text="@string/sweet_and_dessert"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dessert_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/desert_sweet_background"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:padding="10dp" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="34dp"
            android:contentDescription="@string/back_description"
            app:srcCompat="@drawable/ic_arrow_back" />


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


    <include layout="@layout/bottom_sheet_dialog" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>